--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ fonttools==4.32.0
 gitdb==4.0.9
 GitPython==3.1.27
 greenlet==1.1.2
+h3==3.7.3
+haversine==2.5.1
 idna==3.3
 importlib-metadata==4.11.3
 ipykernel==6.13.0
@@ -32,6 +34,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.1
+joblib==1.1.0
 jsonschema==4.4.0
 jupyter-client==7.2.2
 jupyter-core==4.9.2
@@ -46,6 +49,7 @@ nbclient==0.6.0
 nbconvert==6.5.0
 nbformat==5.3.0
 nest-asyncio==1.5.5
+networkx==2.8
 notebook==6.4.10
 numpy==1.22.3
 packaging==21.3
@@ -59,6 +63,7 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 protobuf==3.20.0
 psutil==5.9.0
+psycopg2-binary==2.9.3
 pure-eval==0.2.2
 pyarrow==7.0.0
 pycparser==2.21
@@ -74,6 +79,7 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
 requests==2.27.1
+scikit-learn==1.0.2
 scipy==1.8.0
 semver==2.13.0
 Send2Trash==1.8.0
@@ -85,6 +91,7 @@ stack-data==0.2.0
 streamlit==1.8.1
 tenacity==8.0.1
 terminado==0.13.3
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 toml==0.10.2
 toolz==0.11.2
@@ -100,7 +107,3 @@ wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
 zipp==3.8.0
-
-h3~=3.7.3
-networkx~=2.8
-scikit-learn~=1.0.2
